--- a/MoodernJSFromBeginning/s2/index.html
+++ b/MoodernJSFromBeginning/s2/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>JS Sandobox: Section 2</h1>
-  <script src="templatestring.js"></script>
+  <script src="array.js"></script>
 </body>
 </html>
