--- a/MoodernJSFromBeginning/s2/index.html
+++ b/MoodernJSFromBeginning/s2/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>JS Sandobox: Section 2</h1>
-  <script src="loop.js"></script>
+
+  <!-- <div style="margin-top: 1000px;"></div> -->
+
+  <script src="window.js"></script>
 </body>
 </html>
