--- a/MoodernJSFromBeginning/s2/index.html
+++ b/MoodernJSFromBeginning/s2/index.html
@@ -10,6 +10,6 @@
 
   <!-- <div style="margin-top: 1000px;"></div> -->
 
-  <script src="window.js"></script>
+  <script src="scope.js"></script>
 </body>
 </html>
