dom querySelector querySelectorAll NodeList

--- a/MoodernJSFromBeginning/s3/index.html
+++ b/MoodernJSFromBeginning/s3/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="dom.js"></script>
+  <div id="div1" class="div1class"><span style="color:red">TTT</span></div>
+  
+  <script src="domselector.js"></script>
 </body>
 </html>
