--- a/MoodernJSFromBeginning/s3/index.html
+++ b/MoodernJSFromBeginning/s3/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
   <div id="div1" class="div1class"><span style="color:red">TTT</span></div>
+  <ul class="collection">
+    <li class="collection-item">item1</li>
+    <li class="collection-item">item2</li>
+  </ul>
+  <ul>
+
+  </ul>
   
-  <script src="domselector.js"></script>
+  <script src="domtraverse.js"></script>
 </body>
 </html>
