3- remove replace - elements, class and attributes

--- a/MoodernJSFromBeginning/s3/index.html
+++ b/MoodernJSFromBeginning/s3/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <div id="div1" class="div1class"><span style="color:red">TTT</span></div>
+  <h1 id="h1id">Task List</h1>
   <ul class="collection">
+    <li class="collection-item">item0</li>
     <li class="collection-item">item1</li>
     <li class="collection-item">item2</li>
   </ul>
@@ -15,6 +17,6 @@
 
   </ul>
   
-  <script src="domcreate.js"></script>
+  <script src="domremovereplace.js"></script>
 </body>
 </html>
