mouse event, event object used in event callback

--- a/MoodernJSFromBeginning/s3/index.html
+++ b/MoodernJSFromBeginning/s3/index.html
@@ -14,13 +14,17 @@
   <body>
     <div id="div1" class="div1class"><span style="color: red">TTT</span></div>
     <h1 id="h1id">Task List</h1>
-    <ul class="collection">
-      <li class="collection-item">item0</li>
-      <li class="collection-item">item1</li>
-      <li class="collection-item">item2</li>
-    </ul>
-    <!-- <button type="button" class="btn btn-primary">Button</button> -->
-    <a class="clear-tasks btn btn-primary" href="#" role="button">CLEAR TASKS</a>
+    <div class="card">
+      <ul class="collection">
+        <li class="collection-item">item0</li>
+        <li class="collection-item">item1</li>
+        <li class="collection-item">item2</li>
+      </ul>
+      <!-- <button type="button" class="btn btn-primary">Button</button> -->
+      <a class="clear-tasks btn btn-primary" href="#" role="button"
+        >CLEAR TASKS</a
+      >
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -37,6 +41,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="event.js"></script>
+    <script src="eventmouse.js"></script>
   </body>
 </html>
