--- a/MoodernJSFromBeginning/s3/index.html
+++ b/MoodernJSFromBeginning/s3/index.html
@@ -4,43 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- Compiled and minified CSS -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
   </head>
   <body>
     <div id="div1" class="div1class"><span style="color: red">TTT</span></div>
-    <h1 id="h1id">Task List</h1>
-    <div class="card">
-      <ul class="collection">
-        <li class="collection-item">item0</li>
-        <li class="collection-item">item1</li>
-        <li class="collection-item">item2</li>
-      </ul>
-      <!-- <button type="button" class="btn btn-primary">Button</button> -->
-      <a class="clear-tasks btn btn-primary" href="#" role="button"
-        >CLEAR TASKS</a
-      >
-    </div>
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
 
-    <script src="eventmouse.js"></script>
+    <div class="container">
+      <div class="card">
+        <h1 id="h1id">Task List</h1>
+        <form id="task-form" action="index.php">
+          <div class="input-field">
+            <label for="task">New Task</label>
+            <input type="text" name="task" id="task" value="Walk the dog" />
+            <select>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+            </select>
+            <button type="submit" class="btn btn-primary" value="Add Task">
+              Add Task
+            </button>
+          </div>
+        </form>
+
+        <ul class="collection">
+          <li class="collection-item">item0</li>
+          <li class="collection-item">item1</li>
+          <li class="collection-item">item2</li>
+        </ul>
+        <button type="button" class="btn btn-primary">Button</button>
+        <a class="clear-tasks btn btn-primary" href="#" role="button"
+          >CLEAR TASKS</a
+        >
+      </div>
+    </div>
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="eventkeyboard.js"></script>
   </body>
 </html>
