3- event bubbling+delegation+classList.contains()

--- a/MoodernJSFromBeginning/s3/index.html
+++ b/MoodernJSFromBeginning/s3/index.html
@@ -15,16 +15,11 @@
 
     <div class="container">
       <div class="card">
-        <h1 id="h1id">Task List</h1>
+        <h1 class="tasklist" id="h1id">Task List</h1>
         <form id="task-form" action="index.php">
           <div class="input-field">
             <label for="task">New Task</label>
             <input type="text" name="task" id="task" value="Walk the dog" />
-            <select>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-            </select>
             <button type="submit" class="btn btn-primary" value="Add Task">
               Add Task
             </button>
@@ -45,6 +40,6 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="eventkeyboard.js"></script>
+    <script src="eventbubblingdelegation.js"></script>
   </body>
 </html>
