4- loan calc bussiness logic, error div autoinsert

--- a/MoodernJSFromBeginning/s4-loancalculator/index.html
+++ b/MoodernJSFromBeginning/s4-loancalculator/index.html
@@ -25,7 +25,7 @@
         <div class="col-md-6 mx-auto">
           <div class="card card-body text-center mt-5">
             <h1 class="heading display-5 pb-3">Loan Calculator</h1>
-            <form id="loan-form">
+            <form id="loan-form" class="myform">
               <div class="form-group">
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
@@ -133,5 +133,6 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
+    <script src="calc.js"></script>
   </body>
 </html>
