--- a/MoodernJSFromBeginning/s4-loancalculator/index.html
+++ b/MoodernJSFromBeginning/s4-loancalculator/index.html
@@ -15,6 +15,12 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <style>
+      #loading,
+      #result {
+        display: none;
+      }
+    </style>
 
     <title>Caculator</title>
   </head>
