--- a/MoodernJSFromBeginning/s5-OOP/index.html
+++ b/MoodernJSFromBeginning/s5-OOP/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="objectdotcreate.js"></script>
+    <script src="ES6classes.js"></script>
   </body>
 </html>
