--- a/MoodernJSFromBeginning/s7-Asynchronous/index.html
+++ b/MoodernJSFromBeginning/s7-Asynchronous/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
   <div class="container">
+    <h1>Chuck Norris Joke</h1>
+    <form action="#">
+      <label for="number">Number of Jokes</label>
+      <input type="number" id="input">
+      <input type="button" id='submit' value="Get Jokes">
+      <div class="jokes"></div>
+    </form>
+  </div>
+  <div class="container">
     <button id="button">Get Data</button>
     <div id="output"></div>
   </div>
@@ -19,6 +28,6 @@
     <h1>Customers</h1>
     <div id="customers"></div>
   </div>
-  <script src="xhrloadJSON.js"></script>
+  <script src="xhrExternalAPI.js"></script>
 </body>
 </html>
