--- a/MoodernJSFromBeginning/s7-Asynchronous/callbackindex.html
+++ b/MoodernJSFromBeginning/s7-Asynchronous/callbackindex.html
@@ -7,6 +7,6 @@
   <title>Callback</title>
 </head>
 <body>
-  <script src="callback.js"></script>
+  <script src="callback-promises.js"></script>
 </body>
 </html>
